# openviking-rs

./: .gitignore  BENCHMARK_REPORT.md  Cargo.toml  README.md  TEST_REPORT.md
crates/ov-compactor/: Cargo.toml
crates/ov-compactor/benches/: bench_ov_compactor.rs
crates/ov-compactor/src/: layer1_jsonl.rs  layer2_ccp.rs  layer3_dictionary.rs  layer4_dedup.rs  layer5_format.rs  lib.rs  pipeline.rs  tests.rs
crates/ov-core/: Cargo.toml
crates/ov-core/benches/: bench_ov_core.rs
crates/ov-core/src/: config.rs  context.rs  directories.rs  error.rs  lib.rs  mcp.rs  skill.rs  tree.rs  types.rs
crates/ov-napi/: Cargo.toml  check_exports.js  comprehensive_test_22_failures.js  comprehensive_tests.js  final_225_test_suite.js.backup  fix_negative_tests.py  fix_roundtrip.py  index.d.ts  index.js  mega_comprehensive_225.js  mega_comprehensive_275_plus.js  mega_comprehensive_fixed.js  mega_comprehensive_fixed_v2.js  mega_comprehensive_tests.js  openviking-engine.darwin-arm64.node  package-lock.json  package.json  test_all_functions.js  test_node.js  test_node_fixed.js
crates/ov-napi/src/: lib.rs  lib.rs.backup
crates/ov-parser/: Cargo.toml
crates/ov-parser/benches/: bench_ov_parser.rs
crates/ov-parser/src/: chunker.rs  code.rs  lib.rs  markdown.rs  tests.rs  text.rs  traits.rs
crates/ov-router/: Cargo.toml
crates/ov-router/benches/: bench_ov_router.rs
crates/ov-router/src/: config.rs  lib.rs  rules.rs  selector.rs  tests.rs  types.rs
crates/ov-server/: Cargo.toml
crates/ov-server/benches/: bench_ov_server.rs
crates/ov-server/src/: error.rs  lib.rs  routes.rs  state.rs  tests.rs
crates/ov-session/: Cargo.toml
crates/ov-session/benches/: bench_ov_session.rs
crates/ov-session/src/: compressor.rs  context_window.rs  lib.rs  manager.rs  memory.rs  session.rs  tests.rs
crates/ov-storage/: Cargo.toml
crates/ov-storage/benches/: bench_ov_storage.rs
crates/ov-storage/src/: agfs.rs  directory.rs  lib.rs  local_fs.rs  schema.rs  transaction.rs  viking_fs.rs
crates/ov-vectordb/: Cargo.toml
crates/ov-vectordb/benches/: bench_ov_vectordb.rs
crates/ov-vectordb/src/: error.rs  hnsw.rs  lib.rs  traits.rs
crates/ov-vectordb/src/collection/: mod.rs
crates/ov-vectordb/src/distance/: mod.rs
crates/ov-vectordb/src/filter/: mod.rs
crates/ov-vectordb/src/index/: flat.rs  hnsw.rs  mod.rs  traits.rs
crates/ov-vectordb/src/meta/: mod.rs
crates/ov-vectordb/src/project/: mod.rs
crates/ov-vectordb/src/store/: bytes_row.rs  file_store.rs  kv.rs  mod.rs
crates/ov-vectordb/tests/: extended_tests.rs  vectordb_tests.rs
plugin/memory-openviking/: INSTALL.md  README.md  index.ts  openclaw.plugin.json  package.json
