[workspace]
members = [
  "crates/ov-core",
  "crates/ov-vectordb",
  "crates/ov-storage",
  "crates/ov-parser",
  "crates/ov-session",
  "crates/ov-server",
  "crates/ov-napi",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
axum = "0.8"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
