[package]
name = "ov-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ov-core = { path = "../ov-core" }
ov-storage = { path = "../ov-storage" }
ov-session = { path = "../ov-session" }
ov-compactor = { path = "../ov-compactor" }
ov-router = { path = "../ov-router" }
ov-vectordb = { path = "../ov-vectordb" }
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
md5 = "0.7"

[build-dependencies]
napi-build = "2"
