[package]
name = "ov-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
ov-core = { path = "../ov-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.rand]
workspace = true

[[bench]]
name = "bench_ov_parser"
harness = false
