[package]
name = "ov-router"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true }

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.rand]
workspace = true

[[bench]]
name = "bench_ov_router"
harness = false
