[package]
name = "ov-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ov-core = { path = "../ov-core" }
ov-storage = { path = "../ov-storage" }
ov-session = { path = "../ov-session" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
