[package]
name = "ov-session"
version = "0.1.0"
edition = "2021"

[dependencies]
ov-core = { path = "../ov-core" }
ov-storage = { path = "../ov-storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
