[package]
name = "ov-session"
version = "0.1.0"
edition = "2021"

[dependencies]
ov-core = { path = "../ov-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.rand]
workspace = true

[[bench]]
name = "bench_ov_session"
harness = false
