[package]
name = "ov-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ov-core = { path = "../ov-core" }
ov-vectordb = { path = "../ov-vectordb" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-recursion = "1"

[dev-dependencies]
tempfile = "3"

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.rand]
workspace = true

[[bench]]
name = "bench_ov_storage"
harness = false
