[package]
name = "ov-vectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
ov-core = { path = "../ov-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
